--- a/client/src/MyPage.css
+++ b/client/src/MyPage.css
@@ -2,7 +2,7 @@
     margin-top: 2%;
     margin-left: 4%;
     margin-right: 4%;
-    margin-bottom: 75px;
+    margin-bottom: 2%;
 }
 
 .search-label {
@@ -20,8 +20,8 @@
 }
 
 .copie-info{
-    padding: 20px; 
-    padding-bottom: 40px; 
+    padding: calc(7px + 2vmin); 
+    padding-bottom: 10px; 
     background-color: white;
     border-radius: 10px;
     margin-bottom: 10px;
@@ -38,12 +38,13 @@
     border: none;
     color: #FFFFFF;
     text-align: center;
-    font-size: 18px;
-    padding: 10px;
+    font-size: calc(7px + 2vmin);
+    padding: calc(1px + 2vmin);
     width: fit-content;
     transition: all 0.5s;
     cursor: pointer;
     margin: 5px;
+    margin-top: 10px;
   }
   
   .return-button:hover {
@@ -61,14 +62,19 @@
 }
 
 .title {
-    font-size: large;
-    font-weight: bold;
+  font-size: calc(3px + 2vmin);
+  font-weight: bold;
 }
 #hello{
-    font-size: 35px;
+  font-size: calc(25px + 2vmin);
     font-weight: bold;
     padding: 0;
     margin: -10px;
+}
+.copy-info-field {
+  font-size: calc(1px + 2vmin);
+  font-weight: normal;
+  color: darkslategrey;
 }
 
 .centered{
@@ -88,7 +94,7 @@
 .text-info {
     text-align: center;
     top: 20%;
-    font-size: 20px;
+    font-size: calc(10px + 2vmin);
   }
 
 .description {
