--- a/client/src/Search.css
+++ b/client/src/Search.css
@@ -15,6 +15,7 @@
 }
 
 .results-header-text{
+    font-size: calc(px + 2vmin);
     align-self: stretch;  
 }
 .results-header-corner{
@@ -40,6 +41,7 @@
 }
 .book-info{
     margin-right: 15px;
+    font-size: calc(7px + 2vmin);
 }
 
 #search-box {
@@ -75,11 +77,11 @@
 
 .available-status{
     padding-left: 20px;
-    font-size: smaller;
+    font-size: calc(4px + 2vmin);
 }
 
-.resutl-title {
-    font-size: xx-large;
+.result-title {
+    font-size: calc(17px + 2vmin);
     font-weight: bold;
     color:  #282c34;
     margin-bottom: 10px;
@@ -111,8 +113,8 @@
 .borrow-button {
     background-color: #4CAF50;
     color: white;
-    font-size: xx-large;
-    padding: 12px 20px;
+    font-size: calc(7px + 2vmin);
+    padding: calc(3px + 2vmin) calc(7px + 2vmin);;
     border: none;
     border-radius: 4px;
     margin-left: auto;
@@ -126,10 +128,11 @@
 .modal-exit-button {
     margin: 0px;
     padding: 0px;
-    height: 48px;
-    width: 48px;
+    height: calc(15px + 2vmin);
+    width:  calc(15px + 2vmin);
     border: none;
-    font-size: larger;
+    font-size: calc(px + 2vmin);
+    font-weight: bold;
     color: white;
     background-color:  #f4511e;
 }
